<?xml version="1.0"?>
<package format="3">
  <name>can_bus2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jihengcu@gmail.com">jiheng</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp_components</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>libboost-dev</depend>
  <depend>diagnostic_msgs</depend>
  <depend>autoware_vehicle_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
