<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fixtrans</name>
  <version>0.0.0</version>
  <description>fixtrans</description>
  <maintainer email="18917451141@163.com">lukas</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>


  <depend>rclcpp_components</depend>
  <depend>rclcpp</depend>
  <depend>serial</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>nav_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
