<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>path_rviz_plugin</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jihengcu@gmail.com">jiheng</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>autoware_vehicle_msgs</depend>
  <depend>std_srvs</depend>
  <depend>path_server</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>
  <depend>qtbase5-dev</depend>
  <depend>rclcpp</depend>
  <depend>rviz_common</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/plugins/plugin_description.xml"/>
  </export>
</package>
