<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sonar_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1042645677@qq.com">dzt</maintainer>
  <license>TODO: License declaration</license>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>diagnostic_updater</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
